<resources>
    <string name="app_name">My Computer</string>
    <string name="btn_details">Details</string>
    <string name="tv_name">Name:</string>
    <string name="tv_memory">Memory:</string>
    <string name="tv_laptop">Laptop:</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_ok">OK</string>
    <string name="rb_yes">Yes</string>
    <string name="rb_no">No</string>
    <string name="ph_name">My Computer</string>
    <string name="ph_memory">0</string>
    <string name="ph_laptop">true</string>
    <string name="tv_gigabite">GB</string>
    <string name="toast_details_updated">Details Updated</string>
    <string name="toast_details_canceled">Edit Canceled</string>
    <string name="toast_alert_no_camera">You need a camera for this function</string>
</resources>
