<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jeppestaerk.itsmap17.assignment1.A2Details"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tvNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintRight_toRightOf="@+id/tvMemoryLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/ph_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvNameLabel"
        app:layout_constraintLeft_toRightOf="@+id/tvNameLabel"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvMemoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_memory"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameLabel"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvMemory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/ph_memory"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvMemoryLabel"
        app:layout_constraintLeft_toRightOf="@+id/tvMemoryLabel"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvGigabyte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/tv_gigabite"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvMemory"
        app:layout_constraintLeft_toRightOf="@+id/tvMemory"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvLaptopLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_laptop"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintRight_toRightOf="@+id/tvMemoryLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvMemoryLabel"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvLaptop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/rb_yes"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvLaptopLabel"
        app:layout_constraintLeft_toRightOf="@+id/tvLaptopLabel"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/btn_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />

</android.support.constraint.ConstraintLayout>
